--- a/src/main/resources/templates/user/login-form.html
+++ b/src/main/resources/templates/user/login-form.html
@@ -20,7 +20,7 @@
                     <form method="post" th:action="@{/login}">
                         <div class="row gtr-uniform">
                             <div class="col-12">
-                                <input type="email" name="email" value="" placeholder="Email" />
+                                <input type="text" name="email" value="" placeholder="Email" />
                             </div>
                             <div class="col-12">
                                 <input type="password" name="password" value="" placeholder="Password" />
