--- a/src/main/resources/templates/user/login-main.html
+++ b/src/main/resources/templates/user/login-main.html
@@ -21,7 +21,7 @@
                             <h3>Sign in with Bitnal Account</h3>
                             <p>Share scans, designs and case information. Manage your profile and connections between practices and labs.</p>
                             <ul class="actions">
-                                <li><a th:href="@{/login}" class="button">Sign in</a></li>
+                                <li><a th:href="@{/loginForm}" class="button">Sign in</a></li>
                             </ul>
                         </article>
                         <article>
